--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
   .hero {
     background-image: url("Assets/mobile_intro_bg.png");
     width: 100%;
-  opacity: 0.9;
+opacity: 0.8;
     height: 100%;
     gap: 12px;
     position: relative;
@@ -93,7 +93,7 @@
     padding-top: 50px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: bolder;
     text-align: left;
     color: rgba(23, 43, 77, 1);
     padding-left: 50px;
