--- a/style.css
+++ b/style.css
@@ -144,3 +144,89 @@ opacity: 0.8;
     margin-left: 5px;
   }
   
+  .about_part {
+
+    width: 100%;
+    margin: 2px;
+    background-color: #272a31;
+    border-top-right-radius: 100px;
+    padding: 10px 10px 100px 10px;
+  }
+  
+  .about_part_title {
+  text-align: center;
+    padding: 40px 24px 0;
+  }
+  
+  .about_part_title_txt {
+    text-decoration: underline;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    line-height: 52px;
+    color: #ffffff;
+  }
+  
+
+  
+
+ 
+  
+  .grid-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: #333; /* Adjust the color to match the dark background */
+    padding: 20px;
+  }
+  
+  .grid-item {
+    background-color: #444; /* Adjust the color to match the individual item background */
+    border-radius: 10px; /* Rounded corners */
+    color: white; /* White text color */
+    flex: 1; /* Distribute space evenly */
+    margin: 0 10px; /* Space between items */
+    padding: 20px; /* Padding inside items */
+    text-align: center; /* Center text */
+  }
+  
+  .grid-item h3 {
+    text-decoration: underline;
+    color: #ec5242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .icon-container {
+    /* Style for the icon container */
+  }
+  
+  .icon-container img {
+    width: 50px; /* Adjust size as needed */
+    height: auto; /* Maintain aspect ratio */
+    margin-bottom: 10px;
+  }
+  
+  /* Ensure to add responsive styles if needed */
+  @media (max-width: 768px) {
+    .grid-container {
+      flex-direction: column;
+    }
+    .grid-item {
+      margin-bottom: 10px;
+    }
+  }
+  
+  .linktext {
+    text-align: center; /* This centers the text horizontally within its container */
+    width: 100%;
+    font-size: x-large;
+    color: white;
+    margin-top: 100px; /* Ensures the div takes up the full width */
+  }
+  
+  .linktext p {
+    text-decoration: underline;
+    margin: auto; /* Horizontally centers the paragraph if it has a defined width */
+    display: block; /* Ensures the paragraph is treated as a block-level element */
+  }
